--- a/flexbox/0-styles.css
+++ b/flexbox/0-styles.css
@@ -185,15 +185,15 @@
     padding: 0;
     list-style: none;
   }
-
+/*
   .row::after {
     content: '';
     display: table;
     clear: both;
-  }
+  } */
 
   [class*='col-'] {
-    float: left;
+    /* float: left; */
     padding: 0.5rem;
   }
 
@@ -203,6 +203,10 @@
 
   .col-1-2 {
     width: 50%;
+  }
+
+  .row {
+    display: flex;
   }
 
   /* Navbar
