--- a/flexbox/5-styles.css
+++ b/flexbox/5-styles.css
@@ -61,11 +61,11 @@
 
     /** HEADER **/
     --header-padding: 4rem 0 0;
-    --header-logo-position: relative;
+    /* --header-logo-position: relative;
     --header-logo-link-display: inline-block;
     --header-logo-link-position: absolute;
     --header-logo-link-top: -1rem;
-    --header-logo-link-left: 0;
+    --header-logo-link-left: 0; */
 
     /** FOOTER **/
     --footer-padding: 5rem 0 1rem;
@@ -213,9 +213,9 @@
   /* Navbar
       ============================= */
 
-  .navbar-menu {
+  /* .navbar-menu {
     float: right;
-  }
+  } */
 
   .nav {
     margin: 0;
@@ -270,7 +270,7 @@
          background: transparent;
   }
 
-  .header-logo {
+  /* .header-logo {
     position: var(--header-logo-position);
   }
 
@@ -279,6 +279,11 @@
     position: var(--header-logo-link-position);
     top: var(--header-logo-link-top);
     left: var(--header-logo-link-left);
+  } */
+
+  .header-container {
+    display: flex;
+    justify-content: space-between;
   }
 
   /* Footer
