--- a/flexbox/11-styles.css
+++ b/flexbox/11-styles.css
@@ -565,7 +565,7 @@
   }
 
   .hero-article::before {
-    content: empty;
+    content: none;
     background: rgba(0, 0, 0, 0.8);
     position: absolute;
     top: 0;
