--- a/sass_scss/7-nested_deeper.scss
+++ b/sass_scss/7-nested_deeper.scss
@@ -3,9 +3,9 @@ body {
 
   h1 {
     font-size: 16px;
+  }
 
-    .smaller {
-      font-size: 12px;
-    }
+  h1.smaller {
+    font-size: 12px;
   }
 }
