--- a/form/04-styles.css
+++ b/form/04-styles.css
@@ -704,7 +704,7 @@
     padding-right: 3rem;
   }
 
-  input[tyoe="text"]:focus,
+  input[type="text"]:focus,
   input[type="email"]:focus,
   textarea:focus {
     border: .1rem solid var(--color-grey);
