--- a/Bootstrap/6-styles.css
+++ b/Bootstrap/6-styles.css
@@ -14,3 +14,13 @@
   color: #E0003C;
   border-color: #E0003C;
 }
+
+a {
+  color: #E0003C;
+}
+
+a:hover,
+a:focus {
+  color: #E0003C;
+  text-decoration: none;
+}
